--- a/demo/demo.css
+++ b/demo/demo.css
@@ -8,10 +8,15 @@ html, body {
 }
 
 body {
+  background-color: white;
+}
+
+#game {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
 }
 
 canvas {
